fix all bugs, ready to test

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,5 +1,5 @@
 NAME	= philo
-SRCS	= main.c utils.c utils2.c time.c init.c error.c philo.c game.c
+SRCS	= main.c utils.c time.c init.c error.c philo.c game.c
 OBJS	= $(SRCS:.c=.o)
 CC		= cc -Wall -Wextra -Werror -I.
 
