--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@ CC		= cc -Wall -Wextra -Werror -I.
 all: $(NAME)
 
 $(NAME): $(OBJS)
-# $(CC) $(OBJS) -o $(NAME) -pthread --fsanitize=thread
+# $(CC) $(OBJS) -o $(NAME) -pthread -fsanitize=thread
 	$(CC) $(OBJS) -o $(NAME) -pthread -fsanitize=thread
 
 clean:
